tests/logsPairwiseVul/pairwise_vulnerability_5095171.err
Traceback (most recent call last):
  File "/projects/simlai1/Viberank/VibeRank/tests/test_pairwise.py", line 39, in <module>
    comp = LLMComparator(
           ^^^^^^^^^^^^^^
TypeError: viberank.comparators.LLMcomparator.LLMComparator() got multiple values for keyword argument 'prompt_path'
